// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGrid ACT theme matches the snapshot 1`] = `
<div>
  <div
    aria-colcount="6"
    aria-label="grid"
    aria-multiselectable="false"
    aria-rowcount="9"
    class="MuiDataGrid-root MuiDataGrid-root MuiDataGrid-autoHeight"
    role="grid"
    tabindex="0"
  >
    <div />
    <div
      class="MuiDataGrid-main"
    >
      <div
        class="MuiDataGrid-columnsContainer"
        style="min-height: 56px; max-height: 56px; line-height: 56px;"
      >
        <div
          aria-rowindex="1"
          class="MuiDataGrid-colCellWrapper scroll"
          role="row"
          style="transform: translate3d(-0px, 0, 0); min-width: 948px;"
        >
          <div
            aria-colindex="1"
            class="MuiDataGrid-colCell MuiDataGrid-colCellCheckbox MuiDataGrid-colCellCenter"
            data-field="__check__"
            role="columnheader"
            style="width: 48px; min-width: 48px; max-width: 48px;"
            tabindex="-1"
          >
            <div
              class="MuiDataGrid-colCell-draggable"
              draggable="false"
            >
              <div
                class="MuiDataGrid-colCellTitleContainer"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-label="Select All Rows checkbox"
                      class="PrivateSwitchBase-input-7"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
            </div>
            <div
              class="MuiDataGrid-columnSeparator"
              style="min-height: 56px; opacity: 1;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 19V5h2v14z"
                />
              </svg>
            </div>
          </div>
          <div
            aria-colindex="2"
            class="MuiDataGrid-colCell MuiDataGrid-colCellSortable"
            data-field="id"
            role="columnheader"
            style="width: 150px; min-width: 150px; max-width: 150px;"
            tabindex="-1"
          >
            <div
              class="MuiDataGrid-colCell-draggable"
              draggable="false"
            >
              <div
                class="MuiDataGrid-colCellTitleContainer"
              >
                <div
                  class="MuiDataGrid-colCellTitle"
                  color="primary"
                  title=""
                >
                  ID
                </div>
              </div>
              <div
                class="MuiDataGrid-menuIcon"
              >
                <button
                  aria-controls="mui-12345"
                  aria-haspopup="true"
                  aria-label="Menu"
                  class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-colorPrimary MuiIconButton-sizeSmall"
                  id="mui-12345"
                  tabindex="0"
                  title="Menu"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-columnSeparator"
              style="min-height: 56px; opacity: 1;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 19V5h2v14z"
                />
              </svg>
            </div>
          </div>
          <div
            aria-colindex="3"
            class="MuiDataGrid-colCell MuiDataGrid-colCellSortable"
            data-field="firstName"
            role="columnheader"
            style="width: 200px; min-width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="MuiDataGrid-colCell-draggable"
              draggable="false"
            >
              <div
                class="MuiDataGrid-colCellTitleContainer"
              >
                <div
                  class="MuiDataGrid-colCellTitle"
                  color="primary"
                  title=""
                >
                  First name
                </div>
              </div>
              <div
                class="MuiDataGrid-menuIcon"
              >
                <button
                  aria-controls="mui-12345"
                  aria-haspopup="true"
                  aria-label="Menu"
                  class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-colorPrimary MuiIconButton-sizeSmall"
                  id="mui-12345"
                  tabindex="0"
                  title="Menu"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-columnSeparator"
              style="min-height: 56px; opacity: 1;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 19V5h2v14z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiDataGrid-cell MuiDataGrid-cellLeft"
            role="cell"
            style="min-width: 550px; max-width: 550px; line-height: 55px; min-height: 56px; max-height: 56px;"
          />
        </div>
      </div>
      <div
        style="overflow: visible; width: 0px;"
      >
        <div
          style="width: 0px; height: 524px;"
        >
          <div
            class="MuiDataGrid-window"
            style="top: 56px; overflow-y: hidden;"
          >
            <div
              class="MuiDataGrid-dataContainer data-container"
              style="min-height: 468px; min-width: 948px;"
            >
              <div
                class="MuiDataGrid-viewport"
                style="min-width: 0; max-width: 0; min-height: 468px; max-height: 468px;"
              >
                <div
                  class="rendering-zone"
                  style="max-height: 468px; width: 948px; pointer-events: none; transform: translate3d(-0px, -0px, 0);"
                >
                  <div
                    aria-rowindex="2"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-even"
                    data-id="1"
                    data-rowindex="0"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="0"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="0"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="0"
                      data-value="1"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      1
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="0"
                      data-value="Jon"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Jon
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="3"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-odd"
                    data-id="2"
                    data-rowindex="1"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="1"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="1"
                      data-value="2"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      2
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="1"
                      data-value="Cersei"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Cersei
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="4"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-even"
                    data-id="3"
                    data-rowindex="2"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="2"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="2"
                      data-value="3"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      3
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="2"
                      data-value="Jaime"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Jaime
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="5"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-odd"
                    data-id="4"
                    data-rowindex="3"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="3"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="3"
                      data-value="4"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      4
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="3"
                      data-value="Arya"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Arya
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="6"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-even"
                    data-id="5"
                    data-rowindex="4"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="4"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="4"
                      data-value="5"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      5
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="4"
                      data-value="Daenerys"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Daenerys
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="7"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-odd"
                    data-id="6"
                    data-rowindex="5"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="5"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="5"
                      data-value="6"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      6
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="5"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    />
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="8"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-even"
                    data-id="7"
                    data-rowindex="6"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="6"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="6"
                      data-value="7"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      7
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="6"
                      data-value="Ferrara"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Ferrara
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="9"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-odd"
                    data-id="8"
                    data-rowindex="7"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="7"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="7"
                      data-value="8"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      8
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="7"
                      data-value="Rossini"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Rossini
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                  <div
                    aria-rowindex="10"
                    aria-selected="false"
                    class="MuiDataGrid-row Mui-even"
                    data-id="9"
                    data-rowindex="8"
                    role="row"
                    style="max-height: 52px; min-height: 52px;"
                  >
                    <div
                      aria-colindex="0"
                      class="MuiDataGrid-cell MuiDataGrid-cellCheckbox MuiDataGrid-cellWithRenderer MuiDataGrid-cellCenter"
                      data-field="__check__"
                      data-rowindex="8"
                      role="cell"
                      style="min-width: 48px; max-width: 48px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-4 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            aria-label="Select Row checkbox"
                            class="PrivateSwitchBase-input-7"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </div>
                    <div
                      aria-colindex="1"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="id"
                      data-rowindex="8"
                      data-value="9"
                      role="cell"
                      style="min-width: 150px; max-width: 150px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      9
                    </div>
                    <div
                      aria-colindex="2"
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      data-field="firstName"
                      data-rowindex="8"
                      data-value="Harvey"
                      role="cell"
                      style="min-width: 200px; max-width: 200px; line-height: 51px; min-height: 52px; max-height: 52px;"
                      tabindex="-1"
                    >
                      Harvey
                    </div>
                    <div
                      class="MuiDataGrid-cell MuiDataGrid-cellLeft"
                      role="cell"
                      style="min-width: 550px; max-width: 550px; line-height: 51px; min-height: 52px; max-height: 52px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Mui-resizeTriggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
    <div>
      <div
        class="MuiDataGrid-footer"
      >
        <div />
        <div
          class="MuiTablePagination-root"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
            color="primary"
          >
            <div
              class="MuiTablePagination-spacer"
            />
            <p
              class="MuiTypography-root MuiTablePagination-caption makeStyles-caption-2 MuiTypography-body2 MuiTypography-colorInherit"
            >
              1-9 of 9
            </p>
            <div
              class="MuiTablePagination-actions"
            >
              <button
                aria-label="Previous page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                title="Previous page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Next page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                title="Next page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataGrid ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    aria-colcount="6"
    aria-label="grid"
    aria-multiselectable="false"
    aria-rowcount="9"
    class="MuiDataGrid-root MuiDataGrid-root"
    role="grid"
    tabindex="0"
  >
    <div />
    <div
      class="MuiDataGrid-main"
    >
      <div
        class="MuiDataGrid-columnsContainer"
        style="min-height: 56px; max-height: 56px; line-height: 56px;"
      >
        <div
          aria-rowindex="1"
          class="MuiDataGrid-colCellWrapper scroll"
          role="row"
          style="transform: translate3d(-0px, 0, 0); min-width: 948px;"
        >
          <div
            aria-colindex="1"
            class="MuiDataGrid-colCell MuiDataGrid-colCellCheckbox MuiDataGrid-colCellCenter"
            data-field="__check__"
            role="columnheader"
            style="width: 48px; min-width: 48px; max-width: 48px;"
            tabindex="-1"
          >
            <div
              class="MuiDataGrid-colCell-draggable"
              draggable="false"
            >
              <div
                class="MuiDataGrid-colCellTitleContainer"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-11 MuiCheckbox-root MuiCheckbox-colorPrimary MuiDataGrid-checkboxInput MuiIconButton-colorPrimary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      aria-label="Select All Rows checkbox"
                      class="PrivateSwitchBase-input-14"
                      data-indeterminate="false"
                      type="checkbox"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </span>
              </div>
            </div>
            <div
              class="MuiDataGrid-columnSeparator"
              style="min-height: 56px; opacity: 1;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 19V5h2v14z"
                />
              </svg>
            </div>
          </div>
          <div
            aria-colindex="2"
            class="MuiDataGrid-colCell MuiDataGrid-colCellSortable"
            data-field="id"
            role="columnheader"
            style="width: 150px; min-width: 150px; max-width: 150px;"
            tabindex="-1"
          >
            <div
              class="MuiDataGrid-colCell-draggable"
              draggable="false"
            >
              <div
                class="MuiDataGrid-colCellTitleContainer"
              >
                <div
                  class="MuiDataGrid-colCellTitle"
                  title=""
                >
                  ID
                </div>
              </div>
              <div
                class="MuiDataGrid-menuIcon"
              >
                <button
                  aria-controls="mui-12345"
                  aria-haspopup="true"
                  aria-label="Menu"
                  class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                  id="mui-12345"
                  tabindex="0"
                  title="Menu"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-columnSeparator"
              style="min-height: 56px; opacity: 1;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 19V5h2v14z"
                />
              </svg>
            </div>
          </div>
          <div
            aria-colindex="3"
            class="MuiDataGrid-colCell MuiDataGrid-colCellSortable"
            data-field="firstName"
            role="columnheader"
            style="width: 200px; min-width: 200px; max-width: 200px;"
            tabindex="-1"
          >
            <div
              class="MuiDataGrid-colCell-draggable"
              draggable="false"
            >
              <div
                class="MuiDataGrid-colCellTitleContainer"
              >
                <div
                  class="MuiDataGrid-colCellTitle"
                  title=""
                >
                  First name
                </div>
              </div>
              <div
                class="MuiDataGrid-menuIcon"
              >
                <button
                  aria-controls="mui-12345"
                  aria-haspopup="true"
                  aria-label="Menu"
                  class="MuiButtonBase-root MuiIconButton-root MuiDataGrid-menuIconButton MuiIconButton-sizeSmall"
                  id="mui-12345"
                  tabindex="0"
                  title="Menu"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="MuiDataGrid-columnSeparator"
              style="min-height: 56px; opacity: 1;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiDataGrid-iconSeparator"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11 19V5h2v14z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiDataGrid-cell MuiDataGrid-cellLeft"
            role="cell"
            style="min-width: 550px; max-width: 550px; line-height: 55px; min-height: 56px; max-height: 56px;"
          />
        </div>
      </div>
      <div
        style="overflow: visible; height: 0px; width: 0px;"
      >
        <div
          style="width: 0px; height: 0px;"
        >
          <div
            class="MuiDataGrid-window"
            style="top: 56px; overflow-y: auto;"
          >
            <div
              class="MuiDataGrid-dataContainer data-container"
              style="min-height: 1px; min-width: 948px;"
            >
              <div
                class="MuiDataGrid-viewport"
                style="min-width: 0; max-width: 0; min-height: 0; max-height: 0;"
              >
                <div
                  class="rendering-zone"
                  style="max-height: 0; width: 948px; pointer-events: none; transform: translate3d(-0px, -NaNpx, 0);"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Mui-resizeTriggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
    <div>
      <div
        class="MuiDataGrid-footer"
      >
        <div />
        <div
          class="MuiTablePagination-root"
        >
          <div
            class="MuiToolbar-root MuiToolbar-regular MuiTablePagination-toolbar MuiToolbar-gutters"
          >
            <div
              class="MuiTablePagination-spacer"
            />
            <p
              class="MuiTypography-root MuiTablePagination-caption makeStyles-caption-9 MuiTypography-body2 MuiTypography-colorInherit"
            >
              1-5 of 9
            </p>
            <div
              class="MuiTablePagination-actions"
            >
              <button
                aria-label="Previous page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit Mui-disabled Mui-disabled"
                disabled=""
                tabindex="-1"
                title="Previous page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Next page"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
                tabindex="0"
                title="Next page"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
